Bug 383482 [a11y]overflow:hidden style should not "invalidate" the focused link r=surkov.alexander