accessible/src/atk/nsDocAccessibleWrap.h
@@ -54,10 +54,6 @@ public:
   nsDocAccessibleWrap(nsIDOMNode *aNode, nsIWeakReference *aShell);
   virtual ~nsDocAccessibleWrap();
 
-  NS_IMETHOD FireToolkitEvent(PRUint32 aEvent, nsIAccessible* aAccessible,
-                              void* aData);
-
-protected:
   PRBool mActivated;
 };
 
